--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.39.1",
-    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -70,7 +68,6 @@
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
-    "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
@@ -81,23 +78,31 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^22.12.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.0.0",
-    "drizzle-kit": "^0.31.4",
+    "csstype": "^3.1.3",
+    "drizzle-kit": "^0.18.1",
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
     "esbuild": "^0.25.0",
     "http-proxy-middleware": "^3.0.5",
+    "nanoid": "^5.1.5",
+    "pg-protocol": "^1.10.3",
+    "pg-types": "^4.1.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
-    "vite": "^7.0.6"
+    "undici-types": "^7.13.0",
+    "vite": "^7.0.6",
+    "zod": "^4.0.15"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
